添加了Drawerlayout的使用

--- a/app/src/main/res/layout/activity_drawlayout.xml
+++ b/app/src/main/res/layout/activity_drawlayout.xml
@@ -7,19 +7,17 @@
     android:layout_height="match_parent"
     tools:context="com.example.xhh.materialproject.DrawlayoutActivity">
 
-    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
+            android:id="@+id/toolbarid"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="@color/colorPrimary"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-
     </FrameLayout>
 
     <TextView
@@ -30,4 +28,6 @@
         android:background="#FFF"
         android:text="this is menu"
         android:textSize="39sp" />
+
+
 </android.support.v4.widget.DrawerLayout>
